# sec_rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
eval/: golden_set.json
scripts/: eval_api.py  eval_metrics.py  eval_report.py  evaluate.py  ingest.py
src/sec_rag/: cache.py  config.py  embedding.py
src/sec_rag/agent/: graph.py  guardrails.py  llm.py  nodes.py  prompts.py
src/sec_rag/api/: main.py  routes.py  schemas.py
src/sec_rag/frontend/: app.py
src/sec_rag/ingestion/: chunker.py  edgar_client.py  filter.py  html_extractor.py  indexer.py  keywords.py
src/sec_rag/models/: __init__.py  analysis.py  documents.py  retrieval.py  state.py
src/sec_rag/observability/: langfuse_setup.py  logging.py
src/sec_rag/retrieval/: hybrid_search.py  pipeline.py  reranker.py
tests/: conftest.py  redteam_config.yaml  test_api.py  test_cache.py  test_chunker.py  test_edgar_client.py  test_embedder.py  test_evaluate.py  test_extraction.py  test_graph.py  test_indexer.py  test_logging.py  test_models.py  test_property_validation.py  test_redteam.py  test_retrieval.py
